blockml/test/errors/02_field/e64/e64.view
view: e64
table: 1
fields:
- measure: created
  type: min
  sql: ${dim1}
  result: unk    

- dimension: dim1
  sql: 1